--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "sqlConnection": "server=DESKTOP-8RGJ7SE\\SQLEXPRESS; database=TaskDb; Integrated Security=true"
+  },
+  "JwtSettings": {
+    "validIssuer": "TaskTrackingAPI",
+    "validAudience": "https://localhost:5001",
+    "expires": 500
+  },
   "AllowedHosts": "*"
 }
